# fiscal-guard

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  pyproject.toml
api/src/api/: __init__.py  config.py  dependencies.py  main.py  scripts.py
api/src/api/routers/: __init__.py  auth.py  budgets.py  chat.py  dashboard.py  decisions.py  goals.py  internal.py  users.py
core/: alembic.ini  pyproject.toml
core/src/core/: config.py  scripts.py
core/src/core/ai/: __init__.py  budget_importer.py  decision_agent.py  decision_tools.py  intent_classifier.py
core/src/core/ai/agents/: conversation_swarm.py  decision_agent.py  intent_classifier.py  vision_agent.py
core/src/core/ai/tests/: __init__.py  test_decision_tools.py
core/src/core/ai/tools/: budget_tools.py  decision_tools.py  feedback_tools.py  goal_tools.py
core/src/core/alembic/: env.py
core/src/core/alembic/versions/: 001_initial_schema.py  002_add_purchase_decisions.py  003_added_persona_fields.py  004_add_password_hash.py  005_add_budget_items.py
core/src/core/database/: __init__.py  models.py  session.py
core/src/core/models/: __init__.py  budget.py  cart.py  context.py  conversation.py  decision.py  goal.py  user.py
core/src/core/observability/: opik_config.py  pii_redaction.py  tracing.py
core/src/core/services/: __init__.py  auth.py  budget.py  context_builder.py  conversation.py  decision.py  feedback_handler.py  general_assistant_handler.py  goal_update_handler.py  goals.py
core/src/core/services/handlers/: budget_modification_handler.py  budget_query_handler.py  expense_handler.py  feedback_handler.py  general_assistant_handler.py  goal_update_handler.py  small_talk_handler.py
core/src/core/services/tests/: test_auth_service.py  test_budget_service.py  test_conversation_swarm.py  test_decision_service.py  test_goal_service.py
e2e-tests/: .env.example  README.md  conftest.py  global-setup.ts  main.py  package.json  playwright.config.ts  pyproject.toml  seed.py  tsconfig.json
e2e-tests/tests/: __init__.py  scenario-alex.spec.ts  scenario-marcus.spec.ts  scenario-sarah.spec.ts  setup.ts  test_scenario_alex.py  test_scenario_marcus.py  test_scenario_sarah.py
e2e-tests/utils/: __init__.py  auth.py  auth.ts  seed-data.ts  seed_data.py  test-helpers.ts  test_helpers.py
e2e-tests/utils/seed/: alex.json  marcus.json  sarah.json
evals/: README.md  pyproject.toml
evals/src/evals/: run_evaluation.py
evals/src/evals/datasets/: __init__.py  api_client.py  auth.py  generator.py  multi_turn_generator.py
evals/src/evals/metrics/: __init__.py  budget_math_correctness.py  decision_category_accuracy.py  intent_accuracy.py  score_accuracy.py  state_change_accuracy.py
evals/src/evals/optimizer/: __init__.py
evals/src/evals/personas/: __init__.py
evals/src/evals/scenarios/: __init__.py  schema.py
evals/src/evals/scenarios/multi_turn/: sarah_handlers.json
evals/src/evals/scenarios/purchase_decisions/: sarah_basic.json
evals/src/evals/utils/: seed_data.py
extension/: README.md  package.json  tsconfig.app.json  vite.config.ts
scripts/: build-extension.sh  docker-db-start.sh  docker-push.sh  reset-and-seed.sh  run-evals.sh  run.sh  (+1 more)
(+55 files in other folders)
