[project]
name = "api"
version = "0.1.0"
description = "FastAPI endpoints for Fiscal Guard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "authlib>=1.6.6",
    "core",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "python-jose>=3.5.0",
    "uvicorn",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
