[project]
name = "api"
version = "0.1.0"
description = "FastAPI endpoints for Fiscal Guard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "core",
    "authlib>=1.6.6",
    "fastapi",
    "uvicorn",
    "itsdangerous>=2.2.0",
    "python-jose>=3.5.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
serve = "api.scripts:start_api"
