[project]
name = "e2e-tests-v2"
version = "0.1.0"
description = "Python-based E2E tests and seeding for Fiscal Guard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "email-validator>=2.3.0",
    "playwright>=1.41.0",
    "pytest-playwright>=0.4.4",
    "core",  # Use the core package from workspace
]

[dependency-groups]
dev = [
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
