[project]
name = "evals"
version = "0.1.0"
description = "Evaluations and testing for Fiscal Guard agentic logic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "core",  # Use the core package from workspace
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
